load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "promtool_lib",
    srcs = [
        "archive.go",
        "backfill.go",
        "debug.go",
        "main.go",
        "rules.go",
        "sd.go",
        "tsdb.go",
        "unittest.go",
    ],
    importpath = "github.com/prometheus/prometheus/cmd/promtool",
    visibility = ["//visibility:private"],
    deps = [
        "//config",
        "//discovery",
        "//discovery/file",
        "//discovery/kubernetes",
        "//discovery/targetgroup",
        "//model/labels",
        "//model/rulefmt",
        "//model/textparse",
        "//model/timestamp",
        "//notifier",
        "//plugins",
        "//promql",
        "//promql/parser",
        "//rules",
        "//scrape",
        "//storage",
        "//tsdb",
        "//tsdb/chunks",
        "//tsdb/errors",
        "//tsdb/fileutil",
        "//tsdb/index",
        "@com_github_alecthomas_units//:go_default_library",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_go_kit_log//level:go_default_library",
        "@com_github_google_pprof//profile:go_default_library",
        "@com_github_prometheus_client_golang//api:go_default_library",
        "@com_github_prometheus_client_golang//api/prometheus/v1:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/testutil/promlint:go_default_library",
        "@com_github_prometheus_client_model//go:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@com_github_prometheus_common//expfmt:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_common//version:go_default_library",
        "@com_github_prometheus_exporter_toolkit//web:go_default_library",
        "@in_gopkg_alecthomas_kingpin_v2//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

go_binary(
    name = "promtool",
    embed = [":promtool_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "promtool_test",
    srcs = [
        "backfill_test.go",
        "main_test.go",
        "rules_test.go",
        "sd_test.go",
        "unittest_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":promtool_lib"],
    deps = [
        "//config",
        "//discovery/targetgroup",
        "//model/labels",
        "//model/relabel",
        "//model/rulefmt",
        "//promql",
        "//storage",
        "//tsdb",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_prometheus_client_golang//api/prometheus/v1:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
