load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "azure",
    srcs = ["azure.go"],
    importpath = "github.com/prometheus/prometheus/discovery/azure",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery",
        "//discovery/refresh",
        "//discovery/targetgroup",
        "//util/strutil",
        "@com_github_azure_azure_sdk_for_go//services/compute/mgmt/2018-10-01/compute:go_default_library",
        "@com_github_azure_azure_sdk_for_go//services/network/mgmt/2018-10-01/network:go_default_library",
        "@com_github_azure_go_autorest_autorest//:go_default_library",
        "@com_github_azure_go_autorest_autorest//azure:go_default_library",
        "@com_github_azure_go_autorest_autorest_adal//:go_default_library",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_go_kit_log//level:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_common//version:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":azure",
    visibility = ["//visibility:public"],
)

go_test(
    name = "azure_test",
    srcs = ["azure_test.go"],
    embed = [":azure"],
    deps = [
        "@com_github_azure_azure_sdk_for_go//services/compute/mgmt/2018-10-01/compute:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_uber_go_goleak//:go_default_library",
    ],
)
