load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "consul",
    srcs = ["consul.go"],
    importpath = "github.com/prometheus/prometheus/discovery/consul",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery",
        "//discovery/targetgroup",
        "//util/strutil",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_go_kit_log//level:go_default_library",
        "@com_github_hashicorp_consul_api//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":consul",
    visibility = ["//visibility:public"],
)

go_test(
    name = "consul_test",
    srcs = ["consul_test.go"],
    embed = [":consul"],
    deps = [
        "//discovery/targetgroup",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_uber_go_goleak//:go_default_library",
    ],
)
