load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dns",
    srcs = ["dns.go"],
    importpath = "github.com/prometheus/prometheus/discovery/dns",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery",
        "//discovery/refresh",
        "//discovery/targetgroup",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_miekg_dns//:dns",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//model",
    ],
)

alias(
    name = "go_default_library",
    actual = ":dns",
    visibility = ["//visibility:public"],
)

go_test(
    name = "dns_test",
    srcs = ["dns_test.go"],
    embed = [":dns"],
    deps = [
        "//discovery/targetgroup",
        "@com_github_go_kit_log//:log",
        "@com_github_miekg_dns//:dns",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_uber_go_goleak//:goleak",
    ],
)
