load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "eureka",
    srcs = [
        "client.go",
        "eureka.go",
    ],
    importpath = "github.com/prometheus/prometheus/discovery/eureka",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery",
        "//discovery/refresh",
        "//discovery/targetgroup",
        "//util/strutil",
        "@com_github_go_kit_log//:log",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common//version",
    ],
)

alias(
    name = "go_default_library",
    actual = ":eureka",
    visibility = ["//visibility:public"],
)

go_test(
    name = "eureka_test",
    srcs = [
        "client_test.go",
        "eureka_test.go",
    ],
    embed = [":eureka"],
    deps = [
        "//discovery/targetgroup",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
    ],
)
