load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "file",
    srcs = ["file.go"],
    importpath = "github.com/prometheus/prometheus/discovery/file",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery",
        "//discovery/targetgroup",
        "@com_github_fsnotify_fsnotify//:go_default_library",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_go_kit_log//level:go_default_library",
        "@com_github_grafana_regexp//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":file",
    visibility = ["//visibility:public"],
)

go_test(
    name = "file_test",
    srcs = ["file_test.go"],
    embed = [":file"],
    deps = [
        "//discovery/targetgroup",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_uber_go_goleak//:go_default_library",
    ],
)
