load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gce",
    srcs = ["gce.go"],
    importpath = "github.com/prometheus/prometheus/discovery/gce",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery",
        "//discovery/refresh",
        "//discovery/targetgroup",
        "//util/strutil",
        "@com_github_go_kit_log//:log",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_common//model",
        "@org_golang_google_api//compute/v1:compute",
        "@org_golang_google_api//option",
        "@org_golang_x_oauth2//google",
    ],
)

alias(
    name = "go_default_library",
    actual = ":gce",
    visibility = ["//visibility:public"],
)
