load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gce",
    srcs = ["gce.go"],
    importpath = "github.com/prometheus/prometheus/discovery/gce",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery",
        "//discovery/refresh",
        "//discovery/targetgroup",
        "//util/strutil",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@org_golang_google_api//compute/v1:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":gce",
    visibility = ["//visibility:public"],
)
