load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "hetzner",
    srcs = [
        "hcloud.go",
        "hetzner.go",
        "robot.go",
    ],
    importpath = "github.com/prometheus/prometheus/discovery/hetzner",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery",
        "//discovery/refresh",
        "//discovery/targetgroup",
        "//util/strutil",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_hetznercloud_hcloud_go//hcloud:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_common//version:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":hetzner",
    visibility = ["//visibility:public"],
)

go_test(
    name = "hetzner_test",
    srcs = [
        "hcloud_test.go",
        "mock_test.go",
        "robot_test.go",
    ],
    embed = [":hetzner"],
    deps = [
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
