load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "http",
    srcs = ["http.go"],
    importpath = "github.com/prometheus/prometheus/discovery/http",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery",
        "//discovery/refresh",
        "//discovery/targetgroup",
        "@com_github_go_kit_log//:log",
        "@com_github_grafana_regexp//:regexp",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common//version",
    ],
)

alias(
    name = "go_default_library",
    actual = ":http",
    visibility = ["//visibility:public"],
)

go_test(
    name = "http_test",
    srcs = ["http_test.go"],
    embed = [":http"],
    deps = [
        "//discovery/targetgroup",
        "@com_github_go_kit_log//:log",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_model//go",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
    ],
)
