load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "http",
    srcs = ["http.go"],
    importpath = "github.com/prometheus/prometheus/discovery/http",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery",
        "//discovery/refresh",
        "//discovery/targetgroup",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_grafana_regexp//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_common//version:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":http",
    visibility = ["//visibility:public"],
)

go_test(
    name = "http_test",
    srcs = ["http_test.go"],
    embed = [":http"],
    deps = [
        "//discovery/targetgroup",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_model//go:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
