load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kubernetes",
    srcs = [
        "client_metrics.go",
        "endpoints.go",
        "endpointslice.go",
        "endpointslice_adaptor.go",
        "ingress.go",
        "ingress_adaptor.go",
        "kubernetes.go",
        "node.go",
        "pod.go",
        "service.go",
    ],
    importpath = "github.com/prometheus/prometheus/discovery/kubernetes",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery",
        "//discovery/targetgroup",
        "//util/strutil",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_go_kit_log//level:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_common//version:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_api//discovery/v1:go_default_library",
        "@io_k8s_api//discovery/v1beta1:go_default_library",
        "@io_k8s_api//networking/v1:go_default_library",
        "@io_k8s_api//networking/v1beta1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/fields:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/util/version:go_default_library",
        "@io_k8s_apimachinery//pkg/watch:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth/gcp:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//tools/cache:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
        "@io_k8s_client_go//tools/metrics:go_default_library",
        "@io_k8s_client_go//util/workqueue:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":kubernetes",
    visibility = ["//visibility:public"],
)

go_test(
    name = "kubernetes_test",
    srcs = [
        "endpoints_test.go",
        "endpointslice_adaptor_test.go",
        "endpointslice_test.go",
        "ingress_test.go",
        "kubernetes_test.go",
        "node_test.go",
        "pod_test.go",
        "service_test.go",
    ],
    embed = [":kubernetes"],
    deps = [
        "//discovery",
        "//discovery/targetgroup",
        "//util/testutil",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_api//discovery/v1:go_default_library",
        "@io_k8s_api//discovery/v1beta1:go_default_library",
        "@io_k8s_api//networking/v1:go_default_library",
        "@io_k8s_api//networking/v1beta1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_apimachinery//pkg/version:go_default_library",
        "@io_k8s_client_go//discovery/fake:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//kubernetes/fake:go_default_library",
        "@io_k8s_client_go//tools/cache:go_default_library",
    ],
)
