load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "legacymanager",
    srcs = [
        "manager.go",
        "registry.go",
    ],
    importpath = "github.com/prometheus/prometheus/discovery/legacymanager",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery",
        "//discovery/targetgroup",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_prometheus_client_golang//prometheus",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

alias(
    name = "go_default_library",
    actual = ":legacymanager",
    visibility = ["//visibility:public"],
)

go_test(
    name = "legacymanager_test",
    srcs = ["manager_test.go"],
    embed = [":legacymanager"],
    deps = [
        "//discovery",
        "//discovery/targetgroup",
        "//util/testutil",
        "@com_github_go_kit_log//:log",
        "@com_github_prometheus_client_golang//prometheus/testutil",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
    ],
)
