load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "linode",
    srcs = ["linode.go"],
    importpath = "github.com/prometheus/prometheus/discovery/linode",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery",
        "//discovery/refresh",
        "//discovery/targetgroup",
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_linode_linodego//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_common//version:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":linode",
    visibility = ["//visibility:public"],
)

go_test(
    name = "linode_test",
    srcs = [
        "linode_test.go",
        "mock_test.go",
    ],
    embed = [":linode"],
    deps = [
        "@com_github_go_kit_log//:go_default_library",
        "@com_github_prometheus_common//config:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
