load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "marathon",
    srcs = ["marathon.go"],
    importpath = "github.com/prometheus/prometheus/discovery/marathon",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery",
        "//discovery/refresh",
        "//discovery/targetgroup",
        "//util/strutil",
        "@com_github_go_kit_log//:log",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
    ],
)

alias(
    name = "go_default_library",
    actual = ":marathon",
    visibility = ["//visibility:public"],
)

go_test(
    name = "marathon_test",
    srcs = ["marathon_test.go"],
    embed = [":marathon"],
    deps = [
        "//discovery/targetgroup",
        "@com_github_prometheus_common//model",
    ],
)
